--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-    "name": "homebridge-rfoutlets",
+    "name": "homebridge-rfoutlets-protocol",
     "version": "0.1.0",
-    "description": "RF (433MHz) outlet remote control plugin for homebridge: https://github.com/nfarina/homebridge",
+    "description": "RF (433MHz) outlet remote control plugin for homebridge which uses different protocols: https://github.com/thomas22122212/homebridge-rfoutlets-protocol",
     "license": "(MIT OR ISC)",
     "keywords": [
-        "homebridge-plugin", "433", "433MHz", "Raspberry", "Pi", "rf"
+        "homebridge-plugin", "433", "433MHz", "Raspberry", "Pi", "rf", "rc-switch", "brennenstuhl", "silvercrest"
     ],
     "engines": {
         "node": ">=0.12.0",
         "homebridge": ">=0.2.0"
     },
     "author": {
-        "name": "wstameris"
+        "name": "thomas2212"
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/wstameris/homebridge-rfoutlets"
+        "url": "https://github.com/thomas22122212/homebridge-rfoutlets-protocol"
     },
     "dependencies": {
         "limiter": "1.x"
